# pre

./: .env.example  .gitignore  CLAUDE.md  LICENSE  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: launch.json
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  CommandInput.tsx  InspirationTab.tsx  TrayPopover.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/observers/: app_usage.rs  browser_history.rs  calendar.rs  gateway_client.rs  imessage.rs  location.rs  mod.rs  music.rs  screen_activity.rs
apps/gateway/: package.json
apps/gateway/src/: config.ts  event-bus.ts  gateway.e2e.test.ts  index.ts  queues.ts  scheduler.ts  sidecar-client.ts  ws-server.ts
apps/gateway/src/workers/: embed-worker.ts  insight-worker.ts  snooze-worker.ts  sync-worker.ts
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/src/: types.ts
apps/mobile/src/components/: AlertCard.tsx  ConfidenceBar.tsx  DistributionRange.tsx  DomainTag.tsx  GatewayStatusBanner.tsx  GoalCard.tsx  InsightCard.tsx
apps/mobile/src/context/: GatewayContext.tsx
apps/mobile/src/hooks/: useGateway.ts
apps/mobile/src/screens/: AlertsScreen.tsx  GoalsScreen.tsx  LogScreen.tsx
apps/mobile/src/theme/: tokens.ts  useTheme.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: architecture.md  data-schema.md  privacy-model.md  simulation-spec.md  ui-spec.md
scripts/: start.sh
sidecar/: main.py  requirements.txt  rpc.py
sidecar/handlers/: embed.py  forecast.py  patterns.py  similarity_search.py
sidecar/tests/: test_embed.py  test_forecast.py  test_patterns.py  test_rpc.py
(+11 files in other folders)
