[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime for observers
tokio = { version = "1", features = ["full"] }

# SQLite for local event buffer (offline resilience)
rusqlite = { version = "0.32", features = ["bundled"] }

# WebSocket client to push events to gateway
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# macOS-specific: Objective-C bindings for NSWorkspace, CoreLocation, etc.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSRunLoop", "NSDate", "NSDictionary", "NSNotification", "NSThread", "NSObject"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
block2 = "0.6"

# Unique IDs and URL parsing
uuid = { version = "1", features = ["v4"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
sha2 = "0.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

